--- a/Servicios/Destapador-De-Bantilde;o-Precio.html
+++ b/Servicios/Destapador-De-Bantilde;o-Precio.html
@@ -134,27 +134,27 @@ Destapador De Ba&ntilde;o Precio
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Maquina-Destapaciones-De-Cantilde;erias.html">Maquina Destapaciones De Cañerias </a> 
+       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cañerias-Precios.html">Destapaciones De Cañerias Precios </a> 
+       <a href="../Destapa-Cañerias/Plomero-Destapa-Cañerias.html">Plomero Destapa Cañerias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-Urgencias-24hs.html">Destapaciones Urgencias 24hs </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias.html">Destapaciones Urgencias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Camara-De-Desague-Tapada.html">Camara De Desague Tapada </a> 
+       <a href="../Servicios/Destapacion-Cloacas.html">Destapacion Cloacas </a> 
          </li>
 <!--EndPostsList-->
 
@@ -217,57 +217,57 @@ Destapador De Ba&ntilde;o Precio
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-bien-tapado.html">Como destapar un baño bien tapado </a> 
+       <a href="../Servicios/Empresas-constructoras-zona-norte.html">Empresas constructoras zona norte </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
+       <a href="../Servicios/Desagotadora-El-Destape.html">Desagotadora El Destape </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-puedo-destapar-un-bantilde;o-muy-tapado.html">Como puedo destapar un baño muy tapado </a> 
+       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/En-que-objetos-se-encuentra-la-plata.html">En que objetos se encuentra la plata </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias-24hs.html">Destapaciones Urgencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cañerias-Precios.html">Destapaciones De Cañerias Precios </a> 
+       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
+       <a href="../Servicios/Agencia-sur-bahia-blanca.html">Agencia sur bahia blanca </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-pretul-como-se-usa.html">Destapacaños pretul como se usa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Cantilde;erias-Electrico.html">Destapador De Cañerias Electrico </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-bicarbonato.html">Como destapar el baño con bicarbonato </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
+       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+       <a href="../Servicios/Destapar-Cañeria-Con-Aire-en-Palermo.html">Destapar Cañeria Con Aire en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
