--- a/Servicios/Destapador-de-baño-liquido-walmart.html
+++ b/Servicios/Destapador-de-baño-liquido-walmart.html
@@ -130,27 +130,27 @@ Destapador de baño liquido walmart
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Limpiar-Desague-Bantilde;o.html">Limpiar Desague Baño </a> 
+       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Con-Que-Destapo-Cañerias-en-Palermo.html">Con Que Destapo Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapar-Rejilla-Bantilde;o.html">Destapar Rejilla Baño </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-bicarbonato.html">Como destapar el baño con bicarbonato </a> 
+       <a href="../Servicios/Dans-quel-pays-est-bahia-bla.html">Dans quel pays est bahia bla </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapar-Cañerias-en-Palermo.html">Destapar Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Hay-alguna-manera-de-evitar-Destapar-cantilde;erias-de-agua-potable.html">Hay alguna manera de evitar Destapar cañerias de agua potable </a> 
          </li>
 <!--EndPostsList-->
 
@@ -213,27 +213,47 @@ Destapador de baño liquido walmart
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-en-casa.html">Como destapar un inodoro en casa </a> 
+       <a href="../Destapa-Cañerias/Maquina-De-Destapar-Cloacas.html">Maquina De Destapar Cloacas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html">Destapacaños Cerca De Mi Ubicación </a> 
+       <a href="../Destapa-Cañerias/Camara-Para-Cloacas-Precios.html">Camara Para Cloacas Precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Baños.html">Destapaciones De Baños </a> 
+       <a href="../Destapa-Cañerias/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
+       <a href="../Servicios/Destapador-de-cañerias-casero.html">Destapador de cañerias casero </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Camara-De-Desague-Tapada.html">Camara De Desague Tapada </a> 
+       <a href="../Servicios/Empresas-constructoras-zona-norte.html">Empresas constructoras zona norte </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Limpieza-De-Desagues.html">Limpieza De Desagues </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Como-se-escribe-inodoro-en-ingles.html">Como se escribe inodoro en ingles </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -243,27 +263,7 @@ Destapador de baño liquido walmart
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-puedo-destapar-un-bantilde;o-muy-tapado.html">Como puedo destapar un baño muy tapado </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-un-gancho-de-ropa.html">Como destapar el baño con un gancho de ropa </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-en-zona-norte.html">Destapaciones de cañerias en zona norte </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-pretul-como-se-usa.html">Destapacaños pretul como se usa </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañerias-De-Pvc-en-Palermo.html">Destapar Cañerias De Pvc en Palermo </a> 
+       <a href="../Destapa-Cañerias/Maquina-Para-Destapar-Caños.html">Maquina Para Destapar Caños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
